--- a/art.html
+++ b/art.html
@@ -11,14 +11,13 @@
         var speed=25; // how fast - smaller is faster
         var bangs=5; // how many can be launched simultaneously (note that using too many can slow the script down)
         var colours=new Array(
-          '#f8e4fa', // pale purple (panel-bg)
-          '#ef46b5', // pink (border)
-          '#c180f9', // purple (inner)
+          '#f8e4fa', // pale purple 
+          '#ef46b5', // pink 
+          '#c180f9', // purple 
           '#e639a7', // pink 
           '#ad2fd2', // purple 
 
         );
-        //     panel-bg  border    inner    link     link-hover  page-bg  text
         
         /****************************
         *   Clicksplosion Effect    *
