--- a/blog.html
+++ b/blog.html
@@ -135,6 +135,14 @@
 
     <main>
       <h1>talkin bout love</h1>
+      <article id="2024-06-11">
+        <h2>New Beginnings & Summer Thoughts</h2>
+        <p><strong>2024-06-11</strong></p>
+        <p>Summer is here, and I’m feeling inspired. There’s something about this time of year—the promise of longer days and gentle warmth—that brings a fresh energy to everything.</p>
+        <p>This week, I decided to start a new routine: going for a walk every evening and jotting down whatever comes to mind. Sometimes it’s ideas, sometimes memories, sometimes just silly doodles. </p>
+        <p>One thing’s clear: love can hide in the lightest feelings, in the smallest daily rituals, and in quiet moments with yourself. Here’s to staying open to them.</p>
+      </article>
+      <p class="divider">⊹˚₊‧───────────────‧₊˚⊹</p>
 
       <article id="2024-01-15">
         <h2>Welcome to where i talk about looove</h2>
