Fix 2026-01-25 doodle image path - rename file to match date format and update template

--- a/calendar.html
+++ b/calendar.html
@@ -1,7 +1,8 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Doodle Calendar</title>
   <style>
     body {
@@ -250,9 +251,10 @@ renderCalendar(now.getFullYear(), now.getMonth());
       <td valign="top" width="440" align="center">
         <img
           id="doodle-img"
-          src="art/26-1-25.png"
+          src=""
           width="400"
           alt="Daily doodle"
+          style="display: none;"
         >
       </td>
 
