Update blog, calendar, gitignore and add entries.json

--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Blog</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/styles.css">
 
   <style>
     :root{
@@ -124,7 +124,7 @@
       </div>
 
       <!-- Replace with your real banner image path if you have one -->
-      <img class="banner-img" src="assets/banner.png" alt="Site banner" />
+      <img class="banner-img" src="assets/banner.png" alt="Site banner">
 
       <nav class="nav" aria-label="Primary">
         <a href="index.html">Home</a>
@@ -135,9 +135,9 @@
 
     <main>
       <h1>talkin bout love</h1>
-      <article id="2024-06-11">
+      <article id="2026-01-29">
         <h2>New Beginnings & Summer Thoughts</h2>
-        <p><strong>2024-06-11</strong></p>
+        <p><strong>2026-01-29</strong></p>
         <p>Summer is here, and I’m feeling inspired. There’s something about this time of year—the promise of longer days and gentle warmth—that brings a fresh energy to everything.</p>
         <p>This week, I decided to start a new routine: going for a walk every evening and jotting down whatever comes to mind. Sometimes it’s ideas, sometimes memories, sometimes just silly doodles. </p>
         <p>One thing’s clear: love can hide in the lightest feelings, in the smallest daily rituals, and in quiet moments with yourself. Here’s to staying open to them.</p>
